testing white space error fix, resized logo to fit page

--- a/style.css
+++ b/style.css
@@ -44,6 +44,8 @@
     #logo-container {
         float: left;
         top: 0;
+        height: 100%;
+        width: 31em;
         left: 0;
     }
     
